# holo-cell

./: .gitignore  LICENSE  README.md  all_polyhedra_results.json  all_polyhedra_test.py  breaking_point.py  coherence_rate.py  crystal_layer_results.json  entanglement_engine.py  find_amplitude_formula.py  pyproject.toml  quick_test.py  rhythm_coherence_results.json  shell_scaling_results.json  shell_scaling_test.py  test_3layer_icosahedron.py  test_crystal_layers.py  test_holocell.py  test_merkabah.py  test_rhythm_coherence.py
.deck/: ai.yml  config.yml
docs/: holocell-geometry.jsx  self-healing-networks.md
docs/discovery/: CRYSTAL.json  CRYSTAL.md  DISCOVERY-2025-01-08-COHERENCE.md  DISCOVERY-2026-01-08-CRYSTAL.md  DISCOVERY-2026-01-09-OCTAHEDRON.md  DISCOVERY-LEDGER.md  EIGENSTATE-RESULTS.md  MANIFOLD-TEST.md  ORBITAL-RESULTS.json  PUBLICATION-SUMMARY.md  SESSION-2025-01-08.md  SWEEP-RESULTS.md  UNIFIED-SEED-RESULTS.json  holocell-methods-prompt.md
holocell/: __init__.py  cli.py  constants.py  magic.py  networks.py  operators.py
holocell/evolve/: __init__.py  engine.py  glyphs.py  methodology.py  targets.py
holocell/modes/: __init__.py  coherence_test.py  coherent_zoom.py  contact_test.py  extreme_sparsity.py  fixed_focus.py  glyphs.py  homogeneous.py  maintained.py  moon_pools.py  operators.py  phalanx.py  polyhedra.py  seth_mode.py  spine.py  targets.py  vogel.py  weave.py
tests/: test_core.py  test_modes.py  test_networks.py
