[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "holocell"
version = "0.2.0"
description = "Architectural discovery engine for the holographic substrate of physics constants"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Nicholas David Brown", email = "worldbridgerstudios@gmail.com"}
]
keywords = [
    "physics",
    "constants",
    "triangular-numbers",
    "gene-expression-programming",
    "fine-structure-constant",
    "holographic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.9"
dependencies = []

[project.scripts]
holocell = "holocell.cli:main"

[project.urls]
Homepage = "https://github.com/worldbridgerstudios/HoloCell"
Documentation = "https://zenodo.org/records/18183435"
Repository = "https://github.com/worldbridgerstudios/HoloCell"

[tool.setuptools.packages.find]
where = ["."]
